# cognitive3dpy

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.html  README.md  build_hooks.py  pyproject.toml
.companion-state/: checkpoint-main.json  edits-nicki_ds-760-session_objectives-pldataframe-missing-explicit-schema.json
.github/workflows/: ci.yml  release.yml
notebooks/: getting_started.ipynb
scripts/: sync_schema.py
src/cognitive3dpy/: __init__.py  _client.py  _filters.py  _lookups.py  _pagination.py  _schema.py  _schema_generated.py  _transform.py  auth.py  events.py  exitpoll.py  objectives.py  session_objectives.py  sessions.py  utils.py
tests/: conftest.py  helpers.py  test_auth.py  test_client.py  test_events.py  test_exitpoll.py  test_filters.py  test_lookups.py  test_objectives.py  test_schema.py  test_session_objectives.py  test_sessions.py  test_transform.py  test_utils.py
tests/fixtures/: objective_results.json  objective_step_results.json  objectives.json  objects.json  project.json  questionset_responses.json  questionsets.json  sessions_page.json  sessions_with_events.json  sessions_with_objectives.json
